k8s/example-pod/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petstore
  labels:
    name: petstore
    app: petstore-api
